Prepare examples to be removed from main package and moved into the optional package
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_Progress/trunk@191425 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/examples/horizontal/ancestor.html
+++ b/examples/horizontal/ancestor.html
@@ -32,10 +32,10 @@
 
 <a name="intro">
 <h2><img src="../images/info.gif"/> Introduction</h2>
-		
+
 <p>This example requires :
 <ul>
-<li>PEAR::HTML_Progress 1.2.0RC3 or better.</li>
+<li>PEAR::HTML_Progress 1.2.2 or better.</li>
 </ul>
 </p>
 
@@ -51,7 +51,7 @@
 <li>cell spacing = 2px
 </ul>
 Percent text info is centered on a white background area of 60 pixels width.</p>
-	
+
 <p>[<a href="#top">Top</a>]</p>
 
 
@@ -74,7 +74,7 @@ align     = center
 <h3>Screenshot </h3>
 <p><img src="../screenshots/ancestor.png"/></p>
 <p>[<a href="#top">Top</a>]</p>
-		
+
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
