--- a/examples/horizontal/bgimages.html
+++ b/examples/horizontal/bgimages.html
@@ -32,10 +32,10 @@
 
 <a name="intro">
 <h2><img src="../images/info.gif"/> Introduction</h2>
-		
+
 <p>This example requires :
 <ul>
-<li>PEAR::HTML_Progress 1.2.0RC3 or better.</li>
+<li>PEAR::HTML_Progress 1.2.2 or better.</li>
 </ul>
 </p>
 
@@ -43,9 +43,9 @@
 <p><b>This example will run a natural horizontal ProgressBar and show you how to use
 a picture instead of simple color for active cells.</b></p>
 
-<p>Percent text info is centered on a 60 pixels width area, 
+<p>Percent text info is centered on a 60 pixels width area,
 on left side of the progress bar.</p>
-	
+
 <p>[<a href="#top">Top</a>]</p>
 
 
@@ -89,7 +89,7 @@ valign           = left
 <p><img src="../screenshots/bgimages.png"/></p>
 <p>[<a href="#top">Top</a>]</p>
 
-		
+
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
 <a target="_blank" href="../highlighter.php?file=./horizontal/bgimages.php">Open</a> source listing in a new window.
