--- a/examples/horizontal/smallest.html
+++ b/examples/horizontal/smallest.html
@@ -32,19 +32,19 @@
 
 <a name="intro">
 <h2><img src="../images/info.gif"/> Introduction</h2>
-		
+
 <p>This example requires :
 <ul>
-<li>PEAR::HTML_Progress 1.2.0RC3 or better.</li>
+<li>PEAR::HTML_Progress 1.2.2 or better.</li>
 </ul>
 </p>
 
 <hr/>
 <p><b>This example will run the smallest ProgressBar, you can build.</b></p>
 
-<p>Percent text info is right aligned on 50 pixels width area 
+<p>Percent text info is right aligned on 50 pixels width area
 at right side of the progress bar (default).</p>
-	
+
 <p>[<a href="#top">Top</a>]</p>
 
 
@@ -82,7 +82,7 @@ background-color = #C3C6C3
 <p><img src="../screenshots/smallest.png"/></p>
 
 <p>[<a href="#top">Top</a>]</p>
-		
+
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
