--- a/examples/horizontal/bluesand.html
+++ b/examples/horizontal/bluesand.html
@@ -32,21 +32,21 @@
 
 <a name="intro">
 <h2><img src="../images/info.gif"/> Introduction</h2>
-		
+
 <p>This example requires :
 <ul>
-<li>PEAR::HTML_Progress 1.2.0RC3 or better.</li>
+<li>PEAR::HTML_Progress 1.2.2 or better.</li>
 </ul>
 </p>
 
 <hr/>
 <p><b>This example will run a natural horizontal ProgressBar with blue skin.
-It will also show you how to simulate percent text info outside the progress bar cell group, 
+It will also show you how to simulate percent text info outside the progress bar cell group,
 delimited by a thin border.</b></p>
 
-<p>Percent text info is centered on a 60 pixels width area, 
+<p>Percent text info is centered on a 60 pixels width area,
 on right side of the progress bar.</p>
-	
+
 <p>[<a href="#top">Top</a>]</p>
 
 
@@ -85,7 +85,7 @@ align            = center
 <h3>Screenshot </h3>
 <p><img src="../screenshots/bluesand.png"/></p>
 <p>[<a href="#top">Top</a>]</p>
-		
+
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
