--- a/examples/horizontal/bullit.html
+++ b/examples/horizontal/bullit.html
@@ -32,10 +32,10 @@
 
 <a name="intro">
 <h2><img src="../images/info.gif"/> Introduction</h2>
-		
+
 <p>This example requires :
 <ul>
-<li>PEAR::HTML_Progress 1.2.0RC3 or better.</li>
+<li>PEAR::HTML_Progress 1.2.2 or better.</li>
 </ul>
 </p>
 
@@ -49,7 +49,7 @@
 
 
 <p>Percent text info is right aligned on top side of the progress bar.</p>
-	
+
 <p>[<a href="#top">Top</a>]</p>
 
 
@@ -92,7 +92,7 @@ valign           = top
 <p><img src="../screenshots/bullit.png"/></p>
 
 <p>[<a href="#top">Top</a>]</p>
-		
+
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
