--- a/examples/horizontal/javadanse.html
+++ b/examples/horizontal/javadanse.html
@@ -32,10 +32,10 @@
 
 <a name="intro">
 <h2><img src="../images/info.gif"/> Introduction</h2>
-		
+
 <p>This example requires :
 <ul>
-<li>PEAR::HTML_Progress 1.2.0RC3 or better.</li>
+<li>PEAR::HTML_Progress 1.2.2 or better.</li>
 </ul>
 </p>
 
@@ -44,7 +44,7 @@
 as <i>bluesandplus.php</i>. It also show how to increase cell number (default is 10).</b></p>
 
 <p>Percent text info is center aligned on bottom side of the progress bar.</p>
-	
+
 <p>[<a href="#top">Top</a>]</p>
 
 
@@ -89,7 +89,7 @@ valign    = bottom
 <h3>Screenshot </h3>
 <p><img src="../screenshots/javadanse.png"/></p>
 <p>[<a href="#top">Top</a>]</p>
-		
+
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
