--- a/examples/horizontal/model.html
+++ b/examples/horizontal/model.html
@@ -32,15 +32,15 @@
 
 <a name="intro">
 <h2><img src="../images/info.gif"/> Introduction</h2>
-		
+
 <p>This example requires :
 <ul>
-<li>PEAR::HTML_Progress 1.2.0RC3 or better.</li>
+<li>PEAR::HTML_Progress 1.2.2 or better.</li>
 </ul>
 </p>
 
 <hr/>
-<p><b>This example will run a horizontal ProgressBar, with limits (min = 0, max = 60) 
+<p><b>This example will run a horizontal ProgressBar, with limits (min = 0, max = 60)
 and increment set to 5 in the mathematical model <b>TimerProgress</b>.</b></p>
 
 <p>The custom string is center aligned at bottom side of the progress bar.
@@ -48,7 +48,7 @@ Cells have default size and colors.</p>
 
 <p>First introduction of progress handler (user-callback). Function is defined on lines
 21 thru 38, and attached on progress bar at line 45.</p>
-	
+
 <p>[<a href="#top">Top</a>]</p>
 
 
@@ -58,9 +58,9 @@ Cells have default size and colors.</p>
 
 Here are options to build this progress bar string (percent text info):
 <pre>
-width  = 170 
-height = 20 
-valign = bottom 
+width  = 170
+height = 20
+valign = bottom
 align  = center
 </pre>
 <div class="fig">HTML_Progress_UI::setStringAttributes()</div>
@@ -74,7 +74,7 @@ align  = center
 <p><img src="../screenshots/model.png"/></p>
 
 <p>[<a href="#top">Top</a>]</p>
-		
+
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
