--- a/examples/horizontal/nostring.html
+++ b/examples/horizontal/nostring.html
@@ -32,10 +32,10 @@
 
 <a name="intro">
 <h2><img src="../images/info.gif"/> Introduction</h2>
-		
+
 <p>This example requires :
 <ul>
-<li>PEAR::HTML_Progress 1.2.0RC3 or better.</li>
+<li>PEAR::HTML_Progress 1.2.2 or better.</li>
 </ul>
 </p>
 
@@ -51,7 +51,7 @@
 <li>cell spacing = 2px
 </ul>
 Percent text info is hidden (see lines 16 and 17).</p>
-	
+
 <p>[<a href="#top">Top</a>]</p>
 
 
@@ -68,7 +68,7 @@ None. Used all default values.
 <h3>Screenshot </h3>
 <p><img src="../screenshots/nostring.png"/></p>
 <p>[<a href="#top">Top</a>]</p>
-		
+
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
