--- a/examples/horizontal/redsandback.html
+++ b/examples/horizontal/redsandback.html
@@ -32,10 +32,10 @@
 
 <a name="intro">
 <h2><img src="../images/info.gif"/> Introduction</h2>
-		
+
 <p>This example requires :
 <ul>
-<li>PEAR::HTML_Progress 1.2.0RC3 or better.</li>
+<li>PEAR::HTML_Progress 1.2.2 or better.</li>
 </ul>
 </p>
 
@@ -44,7 +44,7 @@
 as <i>javadanse.php</i>. It also show how to decrease cell number (default is 10).</b></p>
 
 <p>Percent text info is center aligned on bottom side of the progress bar.</p>
-	
+
 <p>[<a href="#top">Top</a>]</p>
 
 
@@ -84,7 +84,7 @@ valign    = bottom
 <p><img src="../screenshots/redsandback.png"/></p>
 
 <p>[<a href="#top">Top</a>]</p>
-		
+
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
