--- a/examples/vertical/basic.html
+++ b/examples/vertical/basic.html
@@ -32,10 +32,10 @@
 
 <a name="intro">
 <h2><img src="../images/info.gif"/> Introduction</h2>
-		
+
 <p>This example requires :
 <ul>
-<li>PEAR::HTML_Progress 1.2.0RC3 or better.</li>
+<li>PEAR::HTML_Progress 1.2.2 or better.</li>
 </ul>
 </p>
 
@@ -43,10 +43,10 @@
 <p><b>This example will run a vertical ProgressBar, beginning at value 85,
 and increased through 100 with +1 step.</b></p>
 
-<p>Percent text info is right aligned on 50 pixels width area 
+<p>Percent text info is right aligned on 50 pixels width area
 at right side of the progress bar (default).
 <br />Cells have default size and colors.</p>
-	
+
 <p>[<a href="#top">Top</a>]</p>
 
 
@@ -63,7 +63,7 @@ None. Used all default values.
 <h3>Screenshot </h3>
 <p><img src="../screenshots/vertical4.png"/></p>
 <p>[<a href="#top">Top</a>]</p>
-		
+
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
