Prepare examples to be removed from main package and moved into the optional package
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_Progress/trunk@191431 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/examples/newshape/circleback.html
+++ b/examples/newshape/circleback.html
@@ -31,10 +31,10 @@
 
 <a name="intro">
 <h2><img src="../images/info.gif"/> Introduction</h2>
-		
+
 <p>This example requires :
 <ul>
-<li>PEAR::HTML_Progress 1.2.0RC3 or better (see source at line 11).</li>
+<li>PEAR::HTML_Progress 1.2.2 or better (see source at line 11).</li>
 </ul>
 </p>
 
@@ -52,7 +52,7 @@ Percent text info is right aligned on a 100 pixels width area,
 at right side of circle.</p>
 
 <p>A cache system is used on lines 29 thru 37, to avoid built pictures a second times.</p>
-	
+
 <p>[<a href="#top">Top</a>]</p>
 
 
@@ -88,7 +88,7 @@ active-color   = red
 <img src="../screenshots/cb100.png"/>
 </p>
 <p>[<a href="#top">Top</a>]</p>
-		
+
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
 <a target="_blank" href="../highlighter.php?file=./newshape/circleback.php">Open</a> source listing in a new window.
