--- a/examples/newshape/circleplain.html
+++ b/examples/newshape/circleplain.html
@@ -31,10 +31,10 @@
 
 <a name="intro">
 <h2><img src="../images/info.gif"/> Introduction</h2>
-		
+
 <p>This example requires :
 <ul>
-<li>PEAR::HTML_Progress 1.2.0RC3 or better (see source at line 11).</li>
+<li>PEAR::HTML_Progress 1.2.2 or better (see source at line 11).</li>
 </ul>
 </p>
 
@@ -50,7 +50,7 @@
 </ul>
 Percent text info is right aligned on a #EEEEEE background color area of 50 pixels width,
 at right side of circle.</p>
-	
+
 <p>A cache system is used on lines 21 thru 29, to avoid built pictures a second times.</p>
 
 <p>[<a href="#top">Top</a>]</p>
@@ -76,7 +76,7 @@ height           = 50
 
 
 <a name="output">
-<h2><img src="../images/image.gif"/>&nbsp;Output</h2>	
+<h2><img src="../images/image.gif"/>&nbsp;Output</h2>
 <h3>Screenshots </h3>
 <p>
 <img src="../screenshots/circle000.png"/>
@@ -86,7 +86,7 @@ height           = 50
 </p>
 
 <p>[<a href="#top">Top</a>]</p>
-		
+
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
 <a target="_blank" href="../highlighter.php?file=./newshape/circleplain.php">Open</a> source listing in a new window.
