--- a/examples/newshape/rectangle.html
+++ b/examples/newshape/rectangle.html
@@ -31,10 +31,10 @@
 
 <a name="intro">
 <h2><img src="../images/info.gif"/> Introduction</h2>
-		
+
 <p>This example requires :
 <ul>
-<li>PEAR::HTML_Progress 1.2.0RC3 or better (see source at line 11).</li>
+<li>PEAR::HTML_Progress 1.2.2 or better (see source at line 11).</li>
 </ul>
 </p>
 
@@ -44,7 +44,7 @@
 <p>Cell coordinates are pre-computed (line 27) but free x-y-grid coordinates are also possible.
 Percent text info is centered on a white background area of 90 pixels width,
 at bottom side of polygonal shape.</p>
-	
+
 <p>[<a href="#top">Top</a>]</p>
 
 
@@ -77,7 +77,7 @@ height         = 15
 <h3>Screenshot </h3>
 <p><img src="../screenshots/rect64.png"/></p>
 <p>[<a href="#top">Top</a>]</p>
-		
+
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
