--- a/examples/newshape/rectangleback.html
+++ b/examples/newshape/rectangleback.html
@@ -31,20 +31,20 @@
 
 <a name="intro">
 <h2><img src="../images/info.gif"/> Introduction</h2>
-		
+
 <p>This example requires :
 <ul>
-<li>PEAR::HTML_Progress 1.2.0RC3 or better (see source at line 11).</li>
+<li>PEAR::HTML_Progress 1.2.2 or better (see source at line 11).</li>
 </ul>
 </p>
 
-<hr/>
+<hr />
 <p><b>This example will run a polygonal (rectangle 15x3) ProgressBar filled in reverse way.</b></p>
 
 <p>Cell coordinates are pre-computed (line 27) but free x-y-grid coordinates are also possible.
 Percent text info is right aligned on a white background area of 50 pixels width,
 at right side of polygonal shape (default).</p>
-	
+
 <p>[<a href="#top">Top</a>]</p>
 
 
@@ -68,7 +68,7 @@ height         = 10
 <h3>Screenshot </h3>
 <p><img src="../screenshots/rect153.png"/></p>
 <p>[<a href="#top">Top</a>]</p>
-		
+
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
