--- a/examples/newshape/square.html
+++ b/examples/newshape/square.html
@@ -31,10 +31,10 @@
 
 <a name="intro">
 <h2><img src="../images/info.gif"/> Introduction</h2>
-		
+
 <p>This example requires :
 <ul>
-<li>PEAR::HTML_Progress 1.2.0RC3 or better (see source at line 17).</li>
+<li>PEAR::HTML_Progress 1.2.2 or better (see source at line 17).</li>
 </ul>
 </p>
 
@@ -55,7 +55,7 @@ at top side of polygonal shape.</p>
 
 Here are options to build this progress bar string (percent text info):
 <pre>
-valign = top 
+valign = top
 align  = center
 height = 30
 </pre>
@@ -76,7 +76,7 @@ height = 20
 <h3>Screenshot </h3>
 <p><img src="../screenshots/square.png"/></p>
 <p>[<a href="#top">Top</a>]</p>
-		
+
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
