--- a/examples/preload/hidden.html
+++ b/examples/preload/hidden.html
@@ -31,10 +31,10 @@
 
 <a name="intro">
 <h2><img src="../images/info.gif"/> Introduction</h2>
-		
+
 <p>This example requires :
 <ul>
-<li>PEAR::HTML_Progress 1.2.0RC3 or better (see source at line 11).</li>
+<li>PEAR::HTML_Progress 1.2.2 or better (see source at line 11).</li>
 </ul>
 </p>
 
