--- a/examples/newshape/ellipse.html
+++ b/examples/newshape/ellipse.html
@@ -31,10 +31,10 @@
 
 <a name="intro">
 <h2><img src="../images/info.gif"/> Introduction</h2>
-		
+
 <p>This example requires :
 <ul>
-<li>PEAR::HTML_Progress 1.2.0RC3 or better (see source at line 11).</li>
+<li>PEAR::HTML_Progress 1.2.2 or better (see source at line 11).</li>
 </ul>
 </p>
 
@@ -43,7 +43,7 @@
 
 <p>Percent text info is right aligned on a 100 pixels width area,
 at right side of progress shape.</p>
-	
+
 <p>A cache system is used on lines 29 thru 37, to avoid built pictures a second times.</p>
 
 <p>[<a href="#top">Top</a>]</p>
@@ -84,7 +84,7 @@ active-color   = navy
 </p>
 
 <p>[<a href="#top">Top</a>]</p>
-		
+
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
