Prepare examples to be removed from main package and moved into the optional package
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_Progress/trunk@191432 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/examples/indeterminate/half_basic.html
+++ b/examples/indeterminate/half_basic.html
@@ -32,20 +32,20 @@
 
 <a name="intro">
 <h2><img src="../images/info.gif"/> Introduction</h2>
-		
+
 <p>This example requires :
 <ul>
-<li>PEAR::HTML_Progress 1.2.0RC3 or better (see source at line 12).</li>
+<li>PEAR::HTML_Progress 1.2.2 or better (see source at line 12).</li>
 </ul>
 </p>
 
 <hr/>
-<p><b>This example will run a basic ProgressBar in indeterminate mode (without monitor) 
+<p><b>This example will run a basic ProgressBar in indeterminate mode (without monitor)
 until it reached a limit-level (elapse time > 12 seconds).</b></p>
-	
+
 <p>Actions to wait are allowed by user callback myProgressHandler defined on lines 20 to 41.</p>
 
-<p>This callback is attached on progress bar at line 61. If you forget to do that, default 
+<p>This callback is attached on progress bar at line 61. If you forget to do that, default
 will be to wait, done by HTML_Progress::sleep() method.</p>
 
 <p>[<a href="#top">Top</a>]</p>
@@ -90,7 +90,7 @@ increment = 10
 <p><img src="../screenshots/indeterminate_half_basic.png"/></p>
 
 <p>[<a href="#top">Top</a>]</p>
-		
+
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
