--- a/examples/indeterminate/half_monitor.html
+++ b/examples/indeterminate/half_monitor.html
@@ -32,22 +32,22 @@
 
 <a name="intro">
 <h2><img src="../images/info.gif"/> Introduction</h2>
-		
+
 <p>This example requires :
 <ul>
-<li>PEAR::HTML_Progress 1.2.0RC1 or better (see source at line 12).</li>
+<li>PEAR::HTML_Progress 1.2.2 or better (see source at line 12).</li>
 </ul>
 </p>
 
 <hr/>
-<p><b>This example will run a basic ProgressBar in indeterminate mode (with monitor) 
+<p><b>This example will run a basic ProgressBar in indeterminate mode (with monitor)
 then switch back to determinate mode when reached a limit-level (internal value > 240).</b></p>
-	
+
 <p>Actions to switch back to determinate mode are allowed by user callback
 myProgressHandler defined on lines 14 to 38.</p>
 
-<p>This callback is attached on progress bar at line 46 and monitor renders are defined
-on lines 102 to 114 (following QF rendering rules).</p>
+<p>This callback is attached on progress bar at line 66 and monitor renders are defined
+on lines 102 to 113 (following QF rendering rules).</p>
 
 <p>[<a href="#top">Top</a>]</p>
 
@@ -91,7 +91,7 @@ increment = 10
 <p><img src="../screenshots/indeterminate.png"/></p>
 
 <p>[<a href="#top">Top</a>]</p>
-		
+
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
