Prepare examples to be removed from main package and moved into the optional package
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_Progress/trunk@191434 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/examples/multiple/vertical.html
+++ b/examples/multiple/vertical.html
@@ -32,10 +32,10 @@
 
 <a name="intro">
 <h2><img src="../images/info.gif"/> Introduction</h2>
-		
+
 <p>This example requires :
 <ul>
-<li>PEAR::HTML_Progress 1.2.0RC3 or better (see source at line 11).</li>
+<li>PEAR::HTML_Progress 1.2.2 or better (see source at line 11).</li>
 </ul>
 </p>
 
@@ -44,21 +44,21 @@
 
 <p>It will show two vertical progress bar running in opposite sides (down to up and reverse)
 with different increment step.</p>
-	
+
 <p><b>Important: </b>In case you want to use more than one progress meter on a same page.
 <br/>
-To manage all bars easily, you need to identify them by a free simple code to avoid system to generate 
+To manage all bars easily, you need to identify them by a free simple code to avoid system to generate
 random values (see at lines 15 and 35).</p>
 
-<p><b>bar1</b> (on left side) will be filled from down to up (see line 20) with color scheme 
+<p><b>bar1</b> (on left side) will be filled from down to up (see line 20) with color scheme
 defined on lines 22 to 30.</p>
-	
-<p><b>bar2</b> (on right side) will be filled from up to down (see line 40) with color scheme 
+
+<p><b>bar2</b> (on right side) will be filled from up to down (see line 40) with color scheme
 defined on lines 42 to 50.</p>
 
 <p>The loop that will display both progress meter at same time is defined on lines 117 to 119.</p>
 <p>If you want to do something corresponding to bar1 and bar2 process (see lines 114 and 117)
-you should set your own progress handler with method HTML_Progress::setProgressHandler(). 
+you should set your own progress handler with method HTML_Progress::setProgressHandler().
 Default is to do the HTML_Progress::sleep() action (see setAnimSpeed).</p>
 
 <p>[<a href="#top">Top</a>]</p>
@@ -130,7 +130,7 @@ valign           = bottom
 <p><img src="../screenshots/vumeter.png"/></p>
 
 <p>[<a href="#top">Top</a>]</p>
-		
+
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
