Prepare examples to be removed from main package and moved into the optional package
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_Progress/trunk@191440 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/examples/monitor/default1.html
+++ b/examples/monitor/default1.html
@@ -32,24 +32,24 @@
 
 <a name="intro">
 <h2><img src="../images/info.gif"/> Introduction</h2>
-		
+
 <p>This example requires :
 <ul>
-<li>PEAR::HTML_Progress_Monitor 1.2.0RC3 or better (see source at line 11).</li>
+<li>PEAR::HTML_Progress_Monitor 1.2.2 or better (see source at line 11).</li>
 </ul>
 </p>
 
 <p>Be aware that:
 <ul>
-<li>HTML_Progress_Monitor has dependencies (HTML_CSS 0.3.4+, HTML_QuickForm 3.1.1+) </li>
+<li>HTML_Progress_Monitor has dependencies (HTML_QuickForm 3.2.4+) </li>
 </ul>
 </p>
 
 <hr/>
-<p><b>This example will run a default ProgressBar Monitor, and 
-used a default QuickForm renderer without any form template customizations. 
+<p><b>This example will run a default ProgressBar Monitor, and
+used a default QuickForm renderer without any form template customizations.
 No user callback was defined.</b></p>
-	
+
 <p>[<a href="#top">Top</a>]</p>
 
 
@@ -76,7 +76,7 @@ increment = 10 (at line 18)
 <p><img src="../screenshots/monitor_default1.png"/></p>
 
 <p>[<a href="#top">Top</a>]</p>
-		
+
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
