--- a/examples/monitor/function_callback.html
+++ b/examples/monitor/function_callback.html
@@ -32,30 +32,30 @@
 
 <a name="intro">
 <h2><img src="../images/info.gif"/> Introduction</h2>
-		
+
 <p>This example requires :
 <ul>
-<li>PEAR::HTML_Progress_Monitor 1.2.0RC3 or better (see source at line 12).</li>
+<li>PEAR::HTML_Progress_Monitor 1.2.2 or better (see source at line 12).</li>
 </ul>
 </p>
 
 <p>Be aware that:
 <ul>
-<li>HTML_Progress_Monitor has dependencies (HTML_CSS 0.3.4+, HTML_QuickForm 3.1.1+) </li>
+<li>HTML_Progress_Monitor has dependencies (HTML_QuickForm 3.2.4+) </li>
 </ul>
 </p>
 
 <hr/>
-<p><b>This example will run a simple ProgressBar Monitor, with a function user callback. 
-Its starts in indeterminate mode then switch back in determinate mode.</b></p> 
+<p><b>This example will run a simple ProgressBar Monitor, with a function user callback.
+Its starts in indeterminate mode then switch back in determinate mode.</b></p>
 
 <p>Color scheme came from a UI pre-set model (class) called Progress_ITDynamic,
 defined on lines 14 to 25.</p>
 
-<p>The user callback defined on lines 27 to 47, and attached on progress bar at line 54, 
+<p>The user callback defined on lines 27 to 47, and attached on progress bar at line 54,
 will run progress bar until its reached 60 then switch back to determinate mode to complete process.
 All 10%, we will echo result on monitor.</p>
-	
+
 <p>QF renderer rules are defined on lines 91 to 103.</p>
 
 <p>[<a href="#top">Top</a>]</p>
@@ -93,7 +93,7 @@ active-color   = #444444
 <p><img src="../screenshots/monitor_function_callback.png"/></p>
 
 <p>[<a href="#top">Top</a>]</p>
-		
+
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
