--- a/examples/monitor/htmlpage.html
+++ b/examples/monitor/htmlpage.html
@@ -32,22 +32,22 @@
 
 <a name="intro">
 <h2><img src="../images/info.gif"/> Introduction</h2>
-		
+
 <p>This example requires :
 <ul>
-<li>PEAR::HTML_Progress_Monitor 1.2.0RC3 or better (see source at line 12).</li>
+<li>PEAR::HTML_Progress_Monitor 1.2.2 or better (see source at line 12).</li>
 </ul>
 </p>
 
 <p>Be aware that:
 <ul>
-<li>HTML_Progress_Monitor has dependencies (HTML_Page 2.0.0RC2+, HTML_CSS 0.3.4+, HTML_QuickForm 3.1.1+) </li>
+<li>HTML_Progress_Monitor has dependencies (HTML_Page 2.0.0RC2+, HTML_QuickForm 3.2.4+) </li>
 </ul>
 </p>
 
 <hr/>
 <p>Used PEAR::HTML_Page package as QF renderer to display ProgressBar Monitor.</p>
-	
+
 <p>[<a href="#top">Top</a>]</p>
 
 
@@ -65,7 +65,7 @@ None used. Only default values.
 <p><img src="../screenshots/monitor_default1.png"/></p>
 
 <p>[<a href="#top">Top</a>]</p>
-		
+
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
