--- a/examples/monitor/itdynamic.html
+++ b/examples/monitor/itdynamic.html
@@ -32,29 +32,29 @@
 
 <a name="intro">
 <h2><img src="../images/info.gif"/> Introduction</h2>
-		
+
 <p>This example requires :
 <ul>
-<li>PEAR::HTML_Progress_Monitor 1.2.0RC3 or better (see source at line 12).</li>
+<li>PEAR::HTML_Progress_Monitor 1.2.2 or better (see source at line 12).</li>
 </ul>
 </p>
 
 <p>Be aware that:
 <ul>
-<li>HTML_Progress_Monitor has dependencies (HTML_CSS 0.3.4+, HTML_QuickForm 3.1.1+) </li>
+<li>HTML_Progress_Monitor has dependencies (HTML_QuickForm 3.2.4+) </li>
 </ul>
 </p>
 
 <hr/>
 <p><b>This example will run a simple ProgressBar Monitor, with a class-method user callback,
-that simulate a picture file upload operation.</b></p> 
+that simulate a picture file upload operation.</b></p>
 
 <p>Color scheme came from a UI pre-set model (class) called Progress_ITDynamic,
 defined on lines 16 to 27, and attached on progress bar at line 66.</p>
 
-<p>The user callback defined on lines 29 to 54, and attached on progress bar at line 63, 
+<p>The user callback defined on lines 29 to 55, and attached on progress bar at line 68,
 will simulate a picture file upload operation at 10%, 45% and 70%.</p>
-	
+
 <p>[<a href="#top">Top</a>]</p>
 
 
@@ -90,7 +90,7 @@ active-color   = #444444
 <p><img src="../screenshots/monitor_itdynamic.png"/></p>
 
 <p>[<a href="#top">Top</a>]</p>
-		
+
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
 <a target="_blank" href="../highlighter.php?file=./monitor/itdynamic.php">Open</a> source listing in a new window.
