--- a/examples/monitor/method_callback.html
+++ b/examples/monitor/method_callback.html
@@ -32,31 +32,31 @@
 
 <a name="intro">
 <h2><img src="../images/info.gif"/> Introduction</h2>
-		
+
 <p>This example requires :
 <ul>
-<li>PEAR::HTML_Progress_Monitor 1.2.0RC3 or better (see source at line 12).</li>
+<li>PEAR::HTML_Progress_Monitor 1.2.2 or better (see source at line 12).</li>
 </ul>
 </p>
 
 <p>Be aware that:
 <ul>
-<li>HTML_Progress_Monitor has dependencies (HTML_CSS 0.3.4+, HTML_QuickForm 3.1.1+) </li>
+<li>HTML_Progress_Monitor has dependencies (HTML_QuickForm 3.2.4+) </li>
 </ul>
 </p>
 
 <hr/>
 <p><b>This example will run a simple ProgressBar Monitor, in determinate mode, with a
-class-method user callback.</b></p> 
+class-method user callback.</b></p>
 
 <p>Color scheme came from a UI pre-set model (class) called Progress_Default2,
 defined on lines 14 to 24.</p>
 
-<p>The user callback defined on lines 26 to 36, and attached on progress bar at line 43, 
+<p>The user callback defined on lines 26 to 36, and attached on progress bar at line 43,
 will echo each time +10% is reached.</p>
-	
+
 <p>QF renderer rules are defined on lines 73 to 85.</p>
-	
+
 <p>[<a href="#top">Top</a>]</p>
 
 
@@ -92,7 +92,7 @@ active-color = #996
 <p><img src="../screenshots/monitor_method_callback.png"/></p>
 
 <p>[<a href="#top">Top</a>]</p>
-		
+
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
