Prepare examples to be removed from main package and moved into the optional package
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_Progress/trunk@191442 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/examples/observer/complex.html
+++ b/examples/observer/complex.html
@@ -32,22 +32,22 @@
 
 <a name="intro">
 <h2><img src="../images/info.gif"/> Introduction</h2>
-		
+
 <p>This example requires :
 <ul>
-<li>PEAR::HTML_Progress 1.2.0RC3 or better (see source at lines 12, 13).</li>
+<li>PEAR::HTML_Progress 1.2.2 or better (see source at lines 12, 13).</li>
 </ul>
 </p>
 
 <hr/>
-<p><b>This example will run a complex observer mechanism which run two progress bar. 
+<p><b>This example will run a complex observer mechanism which run two progress bar.
 At each full loop of first bar, second bar is increment until this last one reach 100%.</b></p>
 
-<p>All explains are in source code comments. Just a big warning: NEVER forget the line 145.</p>
-	
+<p>All explains are in source code comments. Just a big warning: NEVER forget the line 144.</p>
+
 <p>[<a href="#top">Top</a>]</p>
 
-		
+
 <a name="render">
 <h2><img src="../images/config.gif"/>&nbsp;Render options </h2>
 
@@ -100,7 +100,7 @@ background-color = lightblue
 <p><img src="../screenshots/observer_complex.png"/></p>
 
 <p>[<a href="#top">Top</a>]</p>
-		
+
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
