--- a/examples/observer/default.html
+++ b/examples/observer/default.html
@@ -32,34 +32,34 @@
 
 <a name="intro">
 <h2><img src="../images/info.gif"/> Introduction</h2>
-		
+
 <p>This example requires :
 <ul>
-<li>PEAR::HTML_Progress 1.2.0RC3 or better (see source at lines 11, 12).</li>
+<li>PEAR::HTML_Progress 1.2.2 or better (see source at lines 11, 12).</li>
 </ul>
 </p>
 
-<hr/>
+<hr />
 <p><b>This example will run a ProgressBar in determinate mode that will log into
 a flat file ('progress_observer.log') each changes.</b></p>
 
 <p>Here are the contents of that file :
 <form>
 <textarea readOnly="true" rows="12" cols="80" wrap="virtual">
-a:2:{s:3:"log";s:8:"incValue";s:5:"value";i:10;} 
-a:2:{s:3:"log";s:8:"incValue";s:5:"value";i:20;} 
-a:2:{s:3:"log";s:8:"incValue";s:5:"value";i:30;} 
-a:2:{s:3:"log";s:8:"incValue";s:5:"value";i:40;} 
-a:2:{s:3:"log";s:8:"incValue";s:5:"value";i:50;} 
-a:2:{s:3:"log";s:8:"incValue";s:5:"value";i:60;} 
-a:2:{s:3:"log";s:8:"incValue";s:5:"value";i:70;} 
-a:2:{s:3:"log";s:8:"incValue";s:5:"value";i:80;} 
-a:2:{s:3:"log";s:8:"incValue";s:5:"value";i:90;} 
-a:2:{s:3:"log";s:8:"incValue";s:5:"value";i:100;} 
+a:2:{s:3:"log";s:8:"incValue";s:5:"value";i:10;}
+a:2:{s:3:"log";s:8:"incValue";s:5:"value";i:20;}
+a:2:{s:3:"log";s:8:"incValue";s:5:"value";i:30;}
+a:2:{s:3:"log";s:8:"incValue";s:5:"value";i:40;}
+a:2:{s:3:"log";s:8:"incValue";s:5:"value";i:50;}
+a:2:{s:3:"log";s:8:"incValue";s:5:"value";i:60;}
+a:2:{s:3:"log";s:8:"incValue";s:5:"value";i:70;}
+a:2:{s:3:"log";s:8:"incValue";s:5:"value";i:80;}
+a:2:{s:3:"log";s:8:"incValue";s:5:"value";i:90;}
+a:2:{s:3:"log";s:8:"incValue";s:5:"value";i:100;}
 </textarea>
 </form>
-	
-<p>A default progress bar observer is created at line 21, and attached at line 23	
+
+<p>A default progress bar observer is created at line 21, and attached at line 23
 <p>[<a href="#top">Top</a>]</p>
 
 
@@ -67,7 +67,7 @@ a:2:{s:3:"log";s:8:"incValue";s:5:"value";i:100;}
 <h2><img src="../images/config.gif"/>&nbsp;Render options </h2>
 
 <pre>
-speed = 100 is set at line 16 
+speed = 100 is set at line 16
 </pre>
 <div class="fig">HTML_Progress::setAnimSpeed()</div>
 <pre>
@@ -75,7 +75,7 @@ increment = 10 is set at line 18
 </pre>
 <div class="fig">HTML_Progress::setIncrement()</div>
 <pre>
-border painted with all default options at line 17 (color=black, shape=solid). 
+border painted with all default options at line 17 (color=black, shape=solid).
 Set size to 2 pixels at line 30.
 </pre>
 <div class="fig">HTML_Progress::setBorderPainted()</div>
@@ -90,7 +90,7 @@ Set size to 2 pixels at line 30.
 <p><img src="../screenshots/observer_standard.png"/></p>
 
 <p>[<a href="#top">Top</a>]</p>
-		
+
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
