--- a/examples/observer/simple.html
+++ b/examples/observer/simple.html
@@ -32,43 +32,43 @@
 
 <a name="intro">
 <h2><img src="../images/info.gif"/> Introduction</h2>
-		
+
 <p>This example requires :
 <ul>
-<li>PEAR::HTML_Progress 1.2.0RC3 or better (see source at lines 11, 12).</li>
+<li>PEAR::HTML_Progress 1.2.2 or better (see source at lines 11, 12).</li>
 </ul>
 </p>
 
 <hr/>
-<p><b>This example will run a ProgressBar with a custom class observer mechanism. 
+<p><b>This example will run a ProgressBar with a custom class observer mechanism.
 Output could be send to screen or on flat file 'observer_complex.log'.</b></p>
 
 <p>Here are the contents of that file :
 <form>
 <textarea readOnly="true" rows="21" cols="50" wrap="virtual">
-incValue = 5 
-incValue = 10 
-incValue = 15 
-incValue = 20 
-incValue = 25 
-incValue = 30 
-incValue = 35 
-incValue = 40 
-incValue = 45 
-incValue = 50 
-incValue = 55 
-incValue = 60 
-incValue = 65 
-incValue = 70 
-incValue = 75 
-incValue = 80 
-incValue = 85 
-incValue = 90 
-incValue = 95 
-incValue = 100 
+incValue = 5
+incValue = 10
+incValue = 15
+incValue = 20
+incValue = 25
+incValue = 30
+incValue = 35
+incValue = 40
+incValue = 45
+incValue = 50
+incValue = 55
+incValue = 60
+incValue = 65
+incValue = 70
+incValue = 75
+incValue = 80
+incValue = 85
+incValue = 90
+incValue = 95
+incValue = 100
 </textarea>
 </form>
-	
+
 <p>[<a href="#top">Top</a>]</p>
 
 
@@ -76,7 +76,7 @@ incValue = 100
 <h2><img src="../images/config.gif"/>&nbsp;Render options </h2>
 
 <pre>
-speed = 50 is set at line 46 
+speed = 50 is set at line 46
 </pre>
 <div class="fig">HTML_Progress::setAnimSpeed()</div>
 <pre>
@@ -93,7 +93,7 @@ increment = 5 is set at line 47
 <p><img src="../screenshots/observer_simple.png"/></p>
 
 <p>[<a href="#top">Top</a>]</p>
-		
+
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
