Prepare examples to be removed from main package and moved into the optional package
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_Progress/trunk@191445 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/examples/generator/embedded.html
+++ b/examples/generator/embedded.html
@@ -32,7 +32,7 @@
 
 <a name="intro">
 <h2><img src="../images/info.gif"/> Introduction</h2>
-		
+
 <p>This example requires :
 <ul>
 <li>PEAR::HTML_Progress_Generator 1.2.0RC3 or better (see source at line 12).</li>
@@ -41,13 +41,13 @@
 
 <p>Be aware that:
 <ul>
-<li>HTML_Progress_Generator has dependencies (HTML_CSS 0.3.4+, HTML_QuickForm 3.1.1+, HTML_QuickForm_Controller 0.9.3+) </li>
+<li>HTML_Progress_Generator has dependencies (HTML_QuickForm 3.2.4+, HTML_QuickForm_Controller 1.0.4+) </li>
 </ul>
 </p>
 
 <hr/>
 <p><b>This example will run a custom ProgressBar Controller Wizard integrated in your own
-existing pages. As other examples it will help you to create your own progress bar. 
+existing pages. As other examples it will help you to create your own progress bar.
 You may even save the CSS and/or PHP code at end !</b></p>
 
 <p>This example will show you how to customize all actions (display, preview, process).
@@ -58,7 +58,7 @@ We will use IT template engine family, but you may use engine such as Smarty or 
 <p>But we have choosen to include the generator in our own pages (itdynamic_generator.html)
 set at line 43.</p>
 
-<p>For preview tab, we have to make it ourself. This is done on lines 46 to 57. 
+<p>For preview tab, we have to make it ourself. This is done on lines 46 to 57.
 CSS and Javascript code required for progress bar are merge into html page on lines 49 to 53.</p>
 
 <p>The progress bar generated with all your options at line 47 is finally included into html page
@@ -67,8 +67,8 @@ on lines 55, 56.</p>
 <p>On lines 84 to 208, class MyProcessHandler is defined to replace default 'ActionProcess',
 that will help you to download the file that contents your progress bar PHP/CSS code
 (see option 'text/php' at line 172, rather than default 'text/plain').</p>
- 
-<p>Don't forget also on lines 88 to 90 code to manage action when user click on Cancel button.</p> 
+
+<p>Don't forget also on lines 88 to 90 code to manage action when user click on Cancel button.</p>
 
 <p>And finally, the generator is create at lines 213 to 216, and run on line 218.</p>
 
@@ -99,7 +99,7 @@ and replace :
 <p><img src="../screenshots/generator_embedded.png"/></p>
 
 <p>[<a href="#top">Top</a>]</p>
-		
+
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
