--- a/examples/generator/default.html
+++ b/examples/generator/default.html
@@ -32,25 +32,25 @@
 
 <a name="intro">
 <h2><img src="../images/info.gif"/> Introduction</h2>
-		
+
 <p>This example requires :
 <ul>
-<li>PEAR::HTML_Progress_Generator 1.2.0RC3 or better (see source at line 12).</li>
+<li>PEAR::HTML_Progress_Generator 1.2.2 or better (see source at line 12).</li>
 </ul>
 </p>
 
 <p>Be aware that:
 <ul>
-<li>HTML_Progress_Generator has dependencies (HTML_CSS 0.3.4+, HTML_QuickForm 3.1.1+, HTML_QuickForm_Controller 0.9.3+) </li>
+<li>HTML_Progress_Generator has dependencies (HTML_QuickForm 3.2.4+, HTML_QuickForm_Controller 1.0.4+) </li>
 </ul>
 </p>
 
 <hr/>
-<p><b>This example will run a default ProgressBar Controller Wizard that will help you 
+<p><b>This example will run a default ProgressBar Controller Wizard that will help you
 to create your own progress bar. You may even save the CSS and/or PHP code at end !</b></p>
-	
-<p>Few lines of code are necessary to run this generator. 
-First we start a session at line 15 (to keep data), then we create a HTML_Progress_Generator 
+
+<p>Few lines of code are necessary to run this generator.
+First we start a session at line 15 (to keep data), then we create a HTML_Progress_Generator
 instance at line 17 without options, and finally run the controller wizard itself at line 18.</p>
 
 <p>[<a href="#top">Top</a>]</p>
@@ -76,7 +76,7 @@ None, uses all defaults:
 <p><img src="../screenshots/generator_standard.png"/></p>
 
 <p>[<a href="#top">Top</a>]</p>
-		
+
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
